# nuschl

./: .clang-format  .editorconfig  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  Rakefile  TODO.md  meson.build  meson_options.txt
doc/: Doxyfile
helper/: buildboost.sh  getboost.sh
include/nuschl/: atom.hpp  builtins.hpp  default_env.hpp  environment.hpp  environment_fwd.hpp  exceptions.hpp  function.hpp  interpreter.hpp  interpreter3.hpp  lexer.hpp  number.hpp  primitives.hpp  primitives_impl.hpp  readfile.hpp  s_exp.hpp  s_exp_fwd.hpp  s_exp_helpers.hpp  symbol.hpp  variant.hpp
include/nuschl/config/: variant.hpp
include/nuschl/memory/: s_exp_pool.hpp
include/nuschl/parsing/: input.hpp  lexer.hpp  parseerror.hpp  parser.hpp  reverse_token_iterator.hpp  token.hpp  token_iterator.hpp
include/nuschl/util/: primitives_impl.hpp  s_exp_helpers.hpp
src/lib/: atom.cpp  builtins.cpp  default_env.cpp  environment.cpp  exceptions.cpp  function.cpp  interpreter.cpp  interpreter3.cpp  lexer.cpp  number.cpp  parseerror.cpp  parser.cpp  primitives.cpp  primitives_impl.cpp  readfile.cpp  reverse_token_iterator.cpp  s_exp.cpp  s_exp_helpers.cpp  s_exp_pool.cpp  symbol.cpp  token.cpp  token_iterator.cpp
test/: CMakeLists.txt  meson.build
test/compiletime/: is_printable.cpp
test/include/nuschl/unittests/: helper.hpp  is_printable.hpp  parse_res.hpp  parsestring.hpp  print_test.hpp  s_exp_to_string.hpp  string_to_s_exp.hpp  string_to_string.hpp  string_to_x.hpp  unique.hpp  vector_printer.hpp
test/lib/: helper.cpp  parse_res.cpp  parsestring.cpp  print_test.cpp  s_exp_to_string.cpp  string_to_s_exp.cpp  string_to_string.cpp  unique.cpp  vector_printer.cpp
test/unittests/: atom.cpp  builtins.cpp  environment.cpp  exceptions.cpp  function.cpp  helper.cpp  helper.hpp  input.cpp  interpreter.cpp  interpreter3.cpp  lexer.cpp  main.cpp  nil.cpp  number.cpp  parseerror.cpp  parser.cpp  primitives.cpp  primitives_impl.cpp  readfile.cpp  reverse_token_iterator.cpp  s_exp.cpp  s_exp_helpers.cpp  s_exp_pool.cpp  symbol.cpp  token.cpp  token_iterator.cpp
